// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDeleteOneRecord A. Starting from empty cache 1. Should successfully delete record and update record cache entry 1`] = `
{
  "__typename": "Penduduk",
  "deletedAt": "2024-02-14T09:45:00Z",
  "id": "30303030-0001-4000-a000-000000000001",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 1. Should handle successfull record deletion 1`] = `
{
  "__typename": "Penduduk",
  "createdAt": "2024-01-10T08:00:00.000Z",
  "deletedAt": "2024-02-14T09:45:00Z",
  "id": "30303030-0001-4000-a000-000000000001",
  "updatedAt": "2024-06-15T10:00:00.000Z",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 1. Should handle successfull record deletion 2`] = `
{
  "__typename": "Keluarga",
  "createdAt": "2024-01-10T08:00:00.000Z",
  "deletedAt": null,
  "id": "30303030-0000-4000-a000-000000000001",
  "updatedAt": "2024-06-15T10:00:00.000Z",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 2. Should handle optimistic cache on record deletion 1`] = `
{
  "__typename": "Penduduk",
  "createdAt": "2024-01-10T08:00:00.000Z",
  "deletedAt": Any<String>,
  "id": "30303030-0001-4000-a000-000000000001",
  "updatedAt": "2024-06-15T10:00:00.000Z",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 2. Should handle optimistic cache on record deletion 2`] = `
{
  "__typename": "Keluarga",
  "createdAt": "2024-01-10T08:00:00.000Z",
  "deletedAt": null,
  "id": "30303030-0000-4000-a000-000000000001",
  "updatedAt": "2024-06-15T10:00:00.000Z",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 3. Should handle optimistic cache rollback on record deletion failure 1`] = `
{
  "__typename": "Penduduk",
  "createdAt": "2024-01-10T08:00:00.000Z",
  "deletedAt": null,
  "id": "30303030-0001-4000-a000-000000000001",
  "updatedAt": "2024-06-15T10:00:00.000Z",
}
`;

exports[`useDeleteOneRecord B. Starting from filled cache 3. Should handle optimistic cache rollback on record deletion failure 2`] = `
{
  "__typename": "Keluarga",
  "createdAt": "2024-01-10T08:00:00.000Z",
  "deletedAt": null,
  "id": "30303030-0000-4000-a000-000000000001",
  "updatedAt": "2024-06-15T10:00:00.000Z",
}
`;
